# geogist

./: .gitignore  README.md  pyproject.toml  pytest.ini
geogist/: __init__.py  band_statistics.json  cli.py  compute_band_statistics.py  data_preprocessing.py  demo.py  environmental_data.py  imagery_download.py  model_wrappers.py  paths.py  sat_embeddings_extractor.py  single_file_galileo.py  test_environmental_data.py  test_full_workflow.py  test_installation.py  test_sat_embeddings.py
